add 'all' to list

--- a/week-06/day-4/templating/cocktails/views/cocktails.ejs
+++ b/week-06/day-4/templating/cocktails/views/cocktails.ejs
@@ -14,6 +14,7 @@ Ez most latszik
 <h1>Cocktails</h1>
 
 <ul>
+  <li>all</li>
   <% for(let i = 0; i < alcoholList.length; i++) { %>
     <li><%= alcoholList[i] %></li>
     <% } %>
